--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <section class="container-fluid">
   <div id="hero" class="row">
     <div class="infos-hero col-md-6">
-      <h1>Titulo h1 onde as coisas <br/><spam class="destak-text">principais acontecem</spam></h1>
+      <h1>Descubra como criar uma Start Up, aumentar suas<br/><spam class="destak-text">vendas e alavancar sua empresa!</spam></h1>
       <div class="row">
           <div class="explications-hero col-md-12">
-            <p>Inscreva-se e receba um eBook gratuito com dicas<br/>valiosas de como gerar mais sucesso e acelerar seu negócio!</p>
+            <p>Confira as melhoras dicas de empreendedorismo. Inscreva-se agora e receba um eBook gratuito com dicas<br/>valiosas de como gerar mais sucesso e acelerar seu negócio!</p>
           </div>
       </div>
     </div>
