--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -129,6 +129,10 @@ $break-large: 1280px;
   text-align: center;
 }
 
+.explications-hero p{
+  font-size: 14px;
+}
+
 .form-group_name {
   white-space : nowrap;
 }
