--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Empreendedorismo Ideias!</title>
+    <title>Empreendedorismo Ideias - Aprenda a Alavancar Sua Empresa</title>
+    <meta name="description" content="Empreendedorismo Ideias ajuda empresários, lojistas e profissionais liberais a crescer. Saiba como melhorar sua empresa ou criar sua Start up. Confira!">
+    <meta name="googlebot" content="index, follow" />
+    <meta name = "robots" content = "index, follow" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
