--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,33 @@
 <html>
   <head>
     <title>Empreendedorismo Ideias!</title>
+    <meta charset="UTF-8">
+    <meta lang="pt-BR">
+    <meta name="description" content="Idéias de empreendedorismo">
+    <meta name="keywords" content="Empreendedorismo,Idéias,Empreender,Negócios,Vendas,Lucro,Crédito">
+    <meta name="author" content="StarGamaFication DevTeam">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
+    <link href="//fonts.googleapis.com/css?family=Raleway:100,200,400,800" rel="stylesheet" type="text/css">
+        <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRH7CXN"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <% unless flash.empty? %>
+	  <script type="text/javascript">
+	      <% flash.each do |f| %>
+	      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+	     	 toastr['<%= type %>']('<%= f[1] %>');
+	      <% end %>
+	  </script>
+	 <% end %>
     <!-- Render navigation bar -->
     <%= render "layouts/navigation" %>
-    <p class="notice"><%= notice %></p>
-     <%= flash_message.html_safe %>
       <%= yield %>
   </body>
   <%= render "layouts/footer" %>
