--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta lang="pt-BR">
     <meta name="description" content="Idéias de empreendedorismo">
-    <meta name="keywords" content="Empreendedorismo,Idéias,Empreender,Negócios,Vendas,Lucro,Crédito">
+    <meta name="keywords" content="Empreendedorismo Ideias ajuda empresários, lojistas e profissionais liberais a crescer. Saiba como melhorar sua empresa ou criar sua Start up. Confira!, Empreendedorismo,Idéias,Empreender,Negócios,Vendas,Lucro,Crédito">
     <meta name="author" content="StarGamaFication DevTeam">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="googlebot" content="index, follow" />
+    <meta name = "robots" content = "index, follow" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
