Minor layout changes
- Changed font-size of <p> tag in home.scss;
- Changed <h1> and <p> tags with real content;
- Changed footer layout and texts.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,8 +17,8 @@
   <div id="basic-infos" class="row">
     <div id="box-basic-infos" class="col-sm-6 col-md-6">
       <article class="row">
-        <h1>Titulo h1 onde as coisas <br/><spam class="destak-text">principais acontecem</spam></h1>
-        <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
+        <h1>Confira as principais matérias e<br/><spam class="destak-text">alanque os resultados da sua empresa</spam></h1>
+        <p>Aprenda sobre gerenciamento de negócios e muitas dicas para sua empresa.</p>
       </article>
       <div class="row">
         <article id="minibox1-basic-infos" class="col-xs-6">
