--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="container-fluid">
   <div class="row">
     <section class="sec-footer-left col-md-4 col-lg-4">
-      <%= image_tag("placeholder-hero.png", id: 'logo-footer') %>
+      <%= image_tag("alta1.png", id: 'logo-footer') %>
     </section>
 
     <section class="col-md-4 col-lg-4 sec-footer-mid">
@@ -14,10 +14,12 @@
     </section>
 
     <section class="col-md-4 col-lg-4 sec-footer-right">
-      <h3>Titulo h3 onde as coisas principais</h3>
-      <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
-        ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
-        fugiat offendit praetermissum in constias legam quibusdam.</p>
+      <h3>Menu</h3>
+      <ul>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Posts', posts_path %></li>
+        <li><%= link_to 'Contato', contact_path %></li>
+      </ul>
     </section>
     <section id="social-icons" class="col-md-4 col-sx-12 col-lg-4">
       <ul>
