--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Empreendedorismo Ideias!</title>
+    <title>Empreendedorismo Ideias - Aprenda a Alavancar Sua Empresa!</title>
     <meta charset="UTF-8">
     <meta lang="pt-BR">
-    <meta name="description" content="Idéias de empreendedorismo">
-    <meta name="keywords" content="Empreendedorismo Ideias ajuda empresários, lojistas e profissionais liberais a crescer. Saiba como melhorar sua empresa ou criar sua Start up. Confira!, Empreendedorismo,Idéias,Empreender,Negócios,Vendas,Lucro,Crédito">
+    <meta name="description" content="Empreendedorismo Ideias ajuda empresários, lojistas e profissionais liberais a crescer. Saiba como melhorar sua empresa ou criar sua Start up. Confira!">
+    <meta name="keywords" content="Empreendedorismo,Idéias,Empreender,Negócios,Vendas,Lucro,Crédito">
     <meta name="author" content="StarGamaFication DevTeam">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="googlebot" content="index, follow" />
