--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -317,6 +317,7 @@ $break-large: 1280px;
   position: absolute;
   top: 40%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
 }
 
