--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
 <section id="highlight-posts" class="container-fluid">
   <div class="row">
     <div id="highlight1" class="col-md-6 col-xs-12">
-      <h1>blablabla<br/><spam class="destak-text">UIKASACHEPORRÃ</spam></h1>
+      <h1>Como atrair clientes<br/><spam class="destak-text">em um momento de crise</spam></h1>
       <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
     </div>
     <div id="highlight2" class="col-md-6 col-xs-12">
