--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
-<h2>Create New Post</h2>
-
-<%= render "posts/form" %>
+<section id="new-post" class="container">
+  <h2>Criar nova postagem</h2>
+  <%= render "posts/form" %>
+</section>
