--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,22 +4,17 @@
       <%= image_tag("alta1.png", id: 'logo-footer') %>
     </section>
 
-    <section class="col-md-4 col-lg-4 sec-footer-mid">
-      <h3>Titulo h3 onde as coisas principais</h3>
-      <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
-      ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
-      fugiat offendit praetermissum in constias legam quibusdam. Cillum quamquam ex
-      enim tempor, iudicem familiaritatem e pariatur, de enim quorum sed admodum de
-      expetendis labore aut constias praetermissum.</p>
-    </section>
-
-    <section class="col-md-4 col-lg-4 sec-footer-right">
+    <section id="menu-list" class="col-md-4 col-lg-4 sec-footer-mid">
       <h3>Menu</h3>
       <ul>
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Posts', posts_path %></li>
         <li><%= link_to 'Contato', contact_path %></li>
       </ul>
+    </section>
+
+    <section class="col-md-4 col-lg-4 sec-footer-right">
+      <h3>Nossas redes sociais</h3>
     </section>
     <section id="social-icons" class="col-md-4 col-sx-12 col-lg-4">
       <ul>
