Minor thanks page changes
- Changed download button text;
- Changed css.

--- a/app/views/home/thanks.html.erb
+++ b/app/views/home/thanks.html.erb
@@ -4,7 +4,7 @@
       <h1>Obrigado pela inscrição!</h1>
     </div>
     <div class="form-hero col-md-12 text-center">
-        <p><%= link_to "Click aqui para baixar o seu ebook gratuitamente", home_pdf_path, class: "btn btn-md btn-success", target: "_blank" %><p>
+        <p><%= link_to "Download eBook", home_pdf_path, class: "btn btn-md btn-success", target: "_blank" %><p>
     </div>
   </div>
 </section>
