--- a/app/assets/stylesheets/thanks.scss
+++ b/app/assets/stylesheets/thanks.scss
@@ -8,3 +8,11 @@ $break-large: 1280px;
 }
 @media screen and (min-width: $break-large) {
 }
+
+.btn-success {
+  font-size: 20px !important;
+}
+
+#hero {
+  padding-bottom: 75px !important;
+}
