Created form in the posts page
- Created form in the posts page;
- minor text change in home <h1>.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   <div id="basic-infos" class="row">
     <div id="box-basic-infos" class="col-sm-6 col-md-6">
       <article class="row">
-        <h1>Confira as principais matérias e<br/><spam class="destak-text">alanque os resultados da sua empresa</spam></h1>
+        <h1>Confira as principais matérias e<br/><spam class="destak-text">alavanque os resultados da sua empresa</spam></h1>
         <p>Aprenda sobre gerenciamento de negócios e muitas dicas para sua empresa.</p>
       </article>
       <div class="row">
