--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,11 +56,11 @@
       <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
     </div>
     <div id="highlight2" class="col-md-6 col-xs-12">
-      <h1>blablabla<br/><spam class="destak-text">UIKASACHEPORRÃ</spam></h1>
+      <h1>5 filmes que todo<br/><spam class="destak-text">empreendedor deveria assistir</spam></h1>
       <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
     </div>
     <div id="highlight3" class="col-md-6 col-xs-12">
-      <h1>blablabla<br/><spam class="destak-text">UIKASACHEPORRÃ</spam></h1>
+      <h1>Cases de empreendedorismo:<br/><spam class="destak-text">Simplificaa</spam></h1>
       <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
     </div>
   </div>
