--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
       <h1>Descubra como criar uma Start Up, aumentar suas<br/><spam class="destak-text">vendas e alavancar sua empresa!</spam></h1>
       <div class="row">
           <div class="explications-hero col-md-12">
-            <p>Confira as melhoras dicas de empreendedorismo. Inscreva-se agora e receba um eBook gratuito com dicas<br/>valiosas de como gerar mais sucesso e acelerar seu negócio!</p>
+            <p>Confira as melhoras dicas de empreendedorismo. Inscreva-se agora e receba um eBook gratuito com dicas valiosas de como gerar mais sucesso e acelerar seu negócio!</p>
           </div>
       </div>
     </div>
