--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
-<h2>Edit Post</h2>
-
-<%= render "posts/form" %>
+<section id="new-post" class="container">
+  <h2>Editar postagem</h2>
+  <%= render "posts/form" %>
+</section>
