--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,8 @@
-<div class="container-fluid">
-  <div class="col-xs-8">
-      <div class="col-xs-12">
-          <h1 class="text-center"> <%= @post.title %> </h1>
-      </div>
-      <div class="col-xs-12">
-          <%= raw @post.body %>
-      </div>
+<section id="post-view" class="container-fluid">
+  <div class="row">
+    <div class="col-md-8 post-content">
+      <h1 class="text-center"> <%= @post.title %> </h1>
+      <%= raw @post.body %>
+    </div>
   </div>
-</div>
+</section>
