Try fix #1 ckeditor

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <section id="post-view" class="container-fluid">
   <div class="row">
-    <div class="col-md-8 post-content">
+    <div class="col-md-8 post-content well">
       <h1 class="text-center"> <%= @post.title %> </h1>
       <%= raw @post.body %>
     </div>
