--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,8 +19,8 @@
       <%= f.input :title, label: "Titulo",class: "form-control" %>
     </div>
 
-    <div class="form-group">
-      <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", id: 'post-ckeditor',class: "form-control post-form-body" %>
+    <div class="form-group" data-no-turbolink>
+      <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body" %>
     </div>
 
     <div class="form-group_btn">
