--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to new_post_path, data: { no_turbolink: true } %>
 <% if @posts.count > 0 %>
   <section id="all-posts" class="container-fluid">
     <div class="row">
@@ -7,7 +8,7 @@
           <div class="col-md-12 well">
             <% if admin_signed_in? %>
               <%= link_to edit_post_path(post) do %>
-                <% fa_icon "pencil", class: "post-edit" %>
+                <% fa_icon "pencil", class: "post-edit", data: { no_turbolink: true } %>
               <% end %>
               <%= link_to post_path(post), method: :delete, data: {confirm: "Tem certeza?"} do %>
                 <% fa_icon "trash", class: "post-delete" %>
