--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
         <p>Aprenda sobre gerenciamento de negócios e muitas dicas para sua empresa.</p>
       </article>
       <div class="row">
-        <article id="minibox1-basic-infos" class="col-xs-6">
+        <!-- <article id="minibox1-basic-infos" class="col-xs-6">
           <%= image_tag("user.png") %>
           <h3>Titulo h3 onde as coisas principais acontecem</h3>
           <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
@@ -30,7 +30,12 @@
           <%= image_tag("user.png") %>
           <h3>Titulo h3 onde as coisas principais acontecem</h3>
           <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
-        </article>
+        </article> -->
+        <ul>
+          <li><h3><a href="#">Como atrair clientes em um momento de crise</a></h3></li>
+          <li><h3><a href="#">5 filmes que todo empreendedor deveria assistir</a></h3></li>
+          <li><h3><a href="#">Cases de empreendedorismo: Simplificaa</a></h3></li>
+        </ul>
       </div>
     </div>
     <div id="box-img-basic-info" class="col-sm-6 col-md-6" >
