--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", id,class: "form-control post-form-body" %>
+      <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body" %>
     </div>
 
     <div class="form-group_btn">
