--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,9 @@
     </div>
 
     <div class="form-group">
-      <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body" %>
+      <div data-no-turbolink>
+        <%= f.text_area :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body ckeditor" %>
+      </div>
     </div>
 
     <div class="form-group_btn">
