Added testimonies to home carousel
- Added testimonies to home carousel;
- Testimonies <p> tag font-size increased;
- Added profile images.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,9 +45,9 @@
 </section>
 <section id="slider" class="container-fluid">
   <div id="carrossel" class="row">
-    <article><%= image_tag("user.png", class: 'img-rounded') %><h2>TesteBlaBlaBla</h2><p>No mundo atual, a complexidade dos estudos efetuados estimula a padronização dos conhecimentos estratégicos para atingir a excelência.</p></article>
-    <article><%= image_tag("user.png", class: 'img-rounded') %><h2>TesteBlaBla</h2><p>Não obstante, o fenômeno da Internet estimula a padronização das diretrizes de desenvolvimento para o futuro.</p></article>
-    <article><%= image_tag("user.png", class: 'img-rounded') %><h2>BlaBlaTeste</h2><p>O cuidado em identificar pontos críticos no fenômeno da Internet possibilita uma melhor visão global dos índices pretendidos.</p></article>
+    <article><%= image_tag("depo4.png", class: 'img-rounded') %><h2>Bruno Maron</h2><p>"Os conteúdos daqui são sensacionais! Compartilho com todos os meus amigos!"</p></article>
+    <article><%= image_tag("depo5.png", class: 'img-rounded') %><h2>Felipe Bogoricin</h2><p>"Fico feliz que tenha blog como esses para me dar dicas de como melhorar o meu negócio. Parabéns pelo trabalho!!!"</p></article>
+    <article><%= image_tag("depo6.png", class: 'img-rounded') %><h2>Paula Aizen</h2><p>"Eu aprendi muito com as matérias produzidas pelo blog. Foi fundamental para ajudar na construção da minha empresa!"</p></article>
   </div>
   <div class="slider-controls">
     <%= image_tag("left-arrow.png", class: "left-arrow") %>
