Try fix ckeditor #5

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<section id="new-post" class="container">
+<section id="new-post" class="container" data-no-turbolink="true">
   <h2>Editar postagem</h2>
   <%= render "posts/form" %>
 </section>
