--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -86,6 +86,11 @@ $break-large: 1280px;
     margin-top: 20px !important;
   }
 
+  #box-basic-infos a, #box-basic-infos a:hover, #box-basic-infos a:visited, #box-basic-infos a:active {
+    color: #7dbefe !important;
+    text-decoration: none;
+  }
+
   h3 {
     padding-left: 15px;
   }
