--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="form-group">
-        <%= f.text_area :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body ckeditor" %>
+        <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, label: "Postagem", class: "form-control post-form-body ckeditor" %>
     </div>
 
     <div class="form-group_btn">
