Try fix ckeditor #9

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<section id="new-post" class="container" data-no-turbolink="true">
+<section id="new-post" class="container">
   <h2>Criar nova postagem</h2>
   <%= render "posts/form" %>
 </section>
