--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,43 +1,1 @@
-<% if @posts.count > 0 %>
-  <section id="all-posts" class="container-fluid">
-    <div class="row">
-      <% @posts.each do |post| %>
-        <% img_post = highlight_img(post) %>
-        <article class="col-md-4 blog-post">
-          <div class="col-md-12 well">
-            <% if admin_signed_in? %>
-              <%= link_to edit_post_path(post) do %>
-                <% fa_icon "pencil", class: "post-edit" %>
-              <% end %>
-              <%= link_to post_path(post), method: :delete, data: {confirm: "Tem certeza?"} do %>
-                <% fa_icon "trash", class: "post-delete" %>
-              <% end %>
-            <% end %>
-            <%= link_to post_path(post) do %>
-              <h1 class="text-center"><%= post.title %><br/></h1>
-              <%= img_post.html_safe %>
-            <% end %>
-          </div>
-        </article>
-      <% end %>
-    </div>
-  </section>
-<% else %>
-  <section id="without-posts" class="container-fluid">
-    <div id="hero" class="row">
-      <article class="col-md-12">
-        <h1>Ainda não temos nenhuma postagem.</h1><br/>
-        <% if admin_signed_in? %>
-          <%= link_to "Faça uma postagem!", new_post_path %>
-        <% else %>
-          <h2>Volte mais tarde que teremos mais conteúdo para você!</h2>
-        <% end %>
-      </article>
-    </div>
-    <div id="hero" class="row">
-      <div class="infos-hero col-md-12">
-        <%= render "leads/form" %>
-      </div>
-    </div>
-  </section>
-<% end %>
+<h1> Hello </h1>
