--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,21 +21,21 @@
         <p>Aprenda sobre gerenciamento de negócios e muitas dicas para sua empresa.</p>
       </article>
       <div class="row">
-        <!-- <article id="minibox1-basic-infos" class="col-xs-6">
-          <%= image_tag("user.png") %>
-          <h3>Titulo h3 onde as coisas principais acontecem</h3>
-          <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
+        <article id="minibox1-basic-infos" class="col-xs-6">
+          <%= image_tag("steve_jobs.png") %>
+          <h3>Steve Jobs</h3>
+          <p>"Seu tempo é limitado, então não perca tempo vivendo a vida de outra pessoa" </p>
         </article>
         <article id="minibox2-basic-infos" class="col-xs-6">
-          <%= image_tag("user.png") %>
-          <h3>Titulo h3 onde as coisas principais acontecem</h3>
-          <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
-        </article> -->
-        <ul>
+          <%= image_tag("robert_louis.png") %>
+          <h3>Robert L. Stevenson</h3>
+          <p>"Mantenha seus medos consigo mesmo, mas compartilhe sua coragem com todo mundo"</p>
+        </article>
+        <!-- <ul>
           <li><h3><a href="#">Como atrair clientes em um momento de crise</a></h3></li>
           <li><h3><a href="#">5 filmes que todo empreendedor deveria assistir</a></h3></li>
           <li><h3><a href="#">Cases de empreendedorismo: Simplificaa</a></h3></li>
-        </ul>
+        </ul> -->
       </div>
     </div>
     <div id="box-img-basic-info" class="col-sm-6 col-md-6" >
