test post index #4

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,22 @@
   <section id="all-posts" class="container-fluid">
     <div class="row">
       <% @posts.each do |post| %>
-        
+        <article class="col-md-4 blog-post">
+          <div class="col-md-12 well">
+            <% if admin_signed_in? %>
+              <%= link_to edit_post_path(post) do %>
+                <% fa_icon "pencil", class: "post-edit" %>
+              <% end %>
+              <%= link_to post_path(post), method: :delete, data: {confirm: "Tem certeza?"} do %>
+                <% fa_icon "trash", class: "post-delete" %>
+              <% end %>
+            <% end %>
+            <%= link_to post_path(post) do %>
+              <h1 class="text-center"><%= post.title %><br/></h1>
+              <%= img_post.html_safe %>
+            <% end %>
+          </div>
+        </article>
       <% end %>
     </div>
   </section>
