Posts leadform bug fix

--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @lead, html: ({class: 'form-lead col-xs-12 col-md-12'}) do |f| %>
+<%= simple_form_for @lead, class: 'form-lead col-xs-12 col-md-12' do |f| %>
   <% if @lead.errors.any? %>
     <div id="error_explanation">
       <h2>
