Link to posts in home highlight posts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,15 +58,15 @@
   <div class="row">
     <div id="highlight1" class="col-md-6 col-xs-12">
       <h1>Como atrair clientes<br/><spam class="destak-text">em um momento de crise</spam></h1>
-      <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
+      <%= link_to("Ver mais...", post_path('1'), class: 'btn btn-default') %>
     </div>
     <div id="highlight2" class="col-md-6 col-xs-12">
       <h1>5 filmes que todo<br/><spam class="destak-text">empreendedor deveria assistir</spam></h1>
-      <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
+      <%= link_to("Ver mais...", post_path('2'), class: 'btn btn-default') %>
     </div>
     <div id="highlight3" class="col-md-6 col-xs-12">
       <h1>Cases de empreendedorismo:<br/><spam class="destak-text">Simplificaa</spam></h1>
-      <%= link_to("Ver mais...", posts_path, class: 'btn btn-default') %>
+      <%= link_to("Aguarde!", "#highlight3", class: 'btn btn-default') %>
     </div>
   </div>
 </section>
