--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,3 @@
-<% binding.pry %>
 <% if @posts.count > 0 %>
   <section id="all-posts" class="container-fluid">
     <div class="row">
@@ -21,6 +20,11 @@
           </div>
         </article>
       <% end %>
+    </div>
+    <div id="hero" class="row">
+      <div class="infos-hero col-md-12">
+        <%= render "leads/form" %>
+      </div>
     </div>
   </section>
 <% else %>
