--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,6 +1,6 @@
 
 #all-posts {
-  margin-top: 50px;
+  padding-top: 50px;
   text-align: center;
   background-image: image-url('BG_header_home_efect.jpg');
   background-attachment: fixed;
