--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
       <% if admin_signed_in? %>
         <li><%= link_to 'Novo post', new_post_path %></li>
-        <li><%= link_to 'Edit Home', contents_path %></li>
+        <li><%= link_to 'Posts', posts_path %></li>
         <li><%= link_to 'Sair', destroy_admin_session_path, method: :delete %></li>
       <% else %>
         <li><%= link_to 'Posts', posts_path %></li>
