--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,28 +21,27 @@
         </article>
       <% end %>
     </div>
-    <div id="hero" class="row">
-      <div class="infos-hero col-md-12">
+    <div class="row">
+      <div class="col-md-12">
         <%= render "leads/form" %>
       </div>
     </div>
   </section>
 <% else %>
   <section id="without-posts" class="container-fluid">
-    <div id="hero" class="row">
+    <div class="row">
       <article class="col-md-12">
-        <h1>Ainda não temos nenhuma postagem.</h1><br/>
+        <h1>Desculpe<br/>Ainda não temos postagens.</h1><br/>
         <% if admin_signed_in? %>
-          <%= link_to "Faça uma postagem!", new_post_path %>
+          <%= link_to "Faça uma postagem!", new_post_path, class: "btn btn-default btn-post" %>
         <% else %>
           <h2>Volte mais tarde que teremos mais conteúdo para você!</h2>
         <% end %>
       </article>
     </div>
-    <div id="hero" class="row">
-      <div class="infos-hero col-md-12">
-        <%= render "leads/form" %>
-      </div>
+    <div id="form-posts" class="row col-md-3">
+      <h2>Baixe nosso eBook!</h2>
+      <%= render "leads/form" %>
     </div>
   </section>
 <% end %>
