Leads export fix and better security control

--- a/app/views/leads/index.csv.erb
+++ b/app/views/leads/index.csv.erb
@@ -1,5 +1,8 @@
-<%- headers = ['nome', 'email', 'tipo', 'ip','data_hora'] -%>
+<%- headers = ['email', 'nome', 'ip', 'tipo', 'data_hora'] -%>
 <%= CSV.generate_line headers %>
 <%- @leads.each do |lead| -%>
-<%= CSV.generate_line(["#{lead.name} #{lead.surname}", lead.email, lead.kind, lead.ip, lead.created_at.strftime('%Y-%m-%d %T')]) -%>
+<% if lead.occupation.include? "diretor" %>
+  <% lead.kind = "B2B"%>
+<% end %>
+<%= CSV.generate_line([lead.email, "#{lead.name} #{lead.surname}", lead.ip, lead.kind, lead.created_at.strftime('%Y-%m-%d %T')]) -%>
 <%- end -%>
