--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,17 +56,16 @@
 </section>
 <section id="highlight-posts" class="container-fluid">
   <div class="row">
-    <div id="highlight1" class="col-md-6 col-xs-12">
-      <h1>Como atrair clientes<br/><spam class="destak-text">em um momento de crise</spam></h1>
-      <%= link_to("Ver mais...", post_path('3'), class: 'btn btn-default') %>
-    </div>
-    <div id="highlight2" class="col-md-6 col-xs-12">
-      <h1>5 filmes que todo<br/><spam class="destak-text">empreendedor deveria assistir</spam></h1>
-      <%= link_to("Ver mais...", post_path('4'), class: 'btn btn-default') %>
-    </div>
-    <div id="highlight3" class="col-md-6 col-xs-12">
-      <h1>Cases de empreendedorismo:<br/><spam class="destak-text">Simplificaa</spam></h1>
-      <%= link_to("Aguarde!", "#highlight3", class: 'btn btn-default') %>
-    </div>
+    <% if @randposts %>
+      <% @randposts.each_with_index do |post, i| %>
+        <% img_post = highlight_img(post) %>
+        <% html_id = "highlight#{i+1}" %>
+          <div id="<%= html_id %>" class="col-md-6 col-xs-12">
+            <%= raw img_post %>
+            <h1 class="text-center"><%= post.title %></h1><br/>
+            <%= link_to 'Ver post', posts_path(post), class: 'btn btn-default' %>
+          </div>
+      <% end %>
+    <% end %>
   </div>
 </section>
