--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
           <div id="<%= html_id %>" class="col-md-6 col-xs-12">
             <%= raw img_post %>
             <h1 class="text-center"><%= post.title %></h1><br/>
-            <%= link_to 'Ver post', posts_path(post), class: 'btn btn-default' %>
+            <%= link_to 'Ver post', post_path(post), class: 'btn btn-default' %>
           </div>
       <% end %>
     <% end %>
