--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -112,6 +112,7 @@ p {
   font-size: 12px;
   color: white;
 }
+
 label {
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
@@ -124,6 +125,7 @@ input {
   -moz-border-radius: 13px !important;
   border-radius: 13px !important;
 }
+
 select {
   font-family: 'Raleway', sans-serif;
   -webkit-border-radius: 13px !important;
@@ -136,6 +138,12 @@ select {
   -webkit-border-radius: 13px !important;
   -moz-border-radius: 13px !important;
   border-radius: 13px !important;
+}
+
+ul li {
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  color: white;
 }
 
 .navbar {
