Posts arrange in post#index

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -63,7 +63,7 @@ $break-large: 1280px;
 }
 
 .blog-post {
-  padding: 0 5px 0 5px;
+  padding: 0px 5px !important;
   position: relative;
   display: inline-block;
 }
