--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -67,6 +67,8 @@ $break-large: 1280px;
 .blog-post {
   padding: 0px 5px !important;
   display: inline-block;
+  vertical-align: top;
+  float: top;
 }
 
 .blog-post a i {
