--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,8 @@
     <div id="post-list" class="col-md-9 col-xs-12">
       <% @posts.each do |post| %>
         <% img_post = highlight_img(post) %>
-        <article class="blog-post col-md-6">
-          <div class="well col-md-12">
+        <article class="blog-post col-md-6 col-xs-12">
+          <div class="well col-md-12 col-xs-12">
             <% if admin_signed_in? %>
               <%= link_to edit_post_path(post) do %>
                 <%= fa_icon "pencil", class: "post-edit" %>
