--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
     <!-- Render navigation bar -->
     <%= render "layouts/navigation" %>
       <%= yield %>
+    <%= disqus_init %>
   </body>
   <%= render "layouts/footer" %>
 </html>
