--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,22 +10,5 @@
     </div>
   </div>
   <h2>Comentários</h2>
-  <div id="disqus_thread"></div>
-  <script>
-
-
-  var disqus_config = function () {
-  this.page.url = 'http://empreendedorismoideias.com.br';  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = ''; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
-  (function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://empreendedorismoideias.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-  })();
-  </script>
-  <script id="dsq-count-scr" src="//empreendedorismoideias.disqus.com/count.js" async></script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+  <%- disqus_thread @post.title %>
 </section>
