Disqus identifier by post.id

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,5 @@
     </div>
   </div>
   <h2>Comentários</h2>
-  <%- disqus_thread @post.id %>
+  <%- disqus_thread @post.id, @post.title %>
 </section>
