--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,6 @@
-<section id="new-post" class="container" data-no-turbolink="true">
-  <h2>Editar postagem</h2>
-  <%= render "posts/form" %>
+<section id="new-post" class="container-fluid">
+  <div class="row col-md-8">
+    <h2>Editar postagem</h2>
+    <%= render "posts/form" %>
+  </div>
 </section>
